// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar correctly renders correct snapshot 1`] = `
<div>
  <div
    class="TopBar-appBar-1"
  >
    <div
      class="TopBar-toolBar-2"
    >
      <img
        alt="datalabs-logo"
        class="TopBar-datalabsLogo-3"
        src="datalabs-hori.png"
      />
      <div
        class="TopBar-buttons-4"
      >
        <div>
          TopBarButton mock 
          {"to":"/projects","label":"Projects"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Slack"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Help"}
        </div>
      </div>
      <div
        style="flex: 1;"
      />
      <div>
        UserIcon mock 
        {"identity":{"expected":"identity","picture":"expectedUrl"}}
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar correctly renders correct snapshot for data manager permission 1`] = `
<div>
  <div
    class="TopBar-appBar-9"
  >
    <div
      class="TopBar-toolBar-10"
    >
      <img
        alt="datalabs-logo"
        class="TopBar-datalabsLogo-11"
        src="datalabs-hori.png"
      />
      <div
        class="TopBar-buttons-12"
      >
        <div>
          TopBarButton mock 
          {"to":"/assets","label":"Asset Repo"}
        </div>
        <div>
          TopBarButton mock 
          {"to":"/projects","label":"Projects"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Slack"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Help"}
        </div>
      </div>
      <div
        style="flex: 1;"
      />
      <div>
        UserIcon mock 
        {"identity":{"expected":"identity","picture":"expectedUrl"}}
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar correctly renders correct snapshot for instance admin permission 1`] = `
<div>
  <div
    class="TopBar-appBar-5"
  >
    <div
      class="TopBar-toolBar-6"
    >
      <img
        alt="datalabs-logo"
        class="TopBar-datalabsLogo-7"
        src="datalabs-hori.png"
      />
      <div
        class="TopBar-buttons-8"
      >
        <div>
          TopBarButton mock 
          {"to":"/admin","label":"Admin"}
        </div>
        <div>
          TopBarButton mock 
          {"to":"/projects","label":"Projects"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Slack"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Help"}
        </div>
      </div>
      <div
        style="flex: 1;"
      />
      <div>
        UserIcon mock 
        {"identity":{"expected":"identity","picture":"expectedUrl"}}
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar correctly renders correct snapshot if catalogue exists 1`] = `
<div>
  <div
    class="TopBar-appBar-13"
  >
    <div
      class="TopBar-toolBar-14"
    >
      <img
        alt="datalabs-logo"
        class="TopBar-datalabsLogo-15"
        src="datalabs-hori.png"
      />
      <div
        class="TopBar-buttons-16"
      >
        <div>
          TopBarButton mock 
          {"to":"/projects","label":"Projects"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Catalogue"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Slack"}
        </div>
        <div>
          TopBarButton mock 
          {"label":"Help"}
        </div>
      </div>
      <div
        style="flex: 1;"
      />
      <div>
        UserIcon mock 
        {"identity":{"expected":"identity","picture":"expectedUrl"}}
      </div>
    </div>
  </div>
</div>
`;
